<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FaceSignIn</string>
    <string name="copyright" translatable="false">Copyright © 2016 - 2019 IAn2018. All Rights Reserved</string>

    <string name="update_title">Discover New Version</string>
    <string name="update_now">update now</string>
    <string name="not_yet">not yet</string>

    <string name="check_version_toast_mag">Your version is already up to date.</string>

    <string name="download_failed">download failed：</string>
    <string name="download_successful">download successful, save path：</string>
    <string name="download_title">Download apk</string>

    <string name="register_account">Register Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_in">Sign in</string>

    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="landing">Landing …</string>

    <string name="again_to_return">Press again to exit the program</string>

    <string name="password_empty">Password is empty</string>
    <string name="account_empty">Account is empty</string>
    <string name="login_fail">Login failed, Incorrect username or password</string>

    <string name="bottom_bar_title_sign">CheckIn</string>
    <string name="bottom_bar_title_quantify">Quantification</string>
    <string name="bottom_bar_title_me">Mine</string>

    <string name="no_scan_active_text">Unable to get the event, please click here to scan the QR code to get</string>

    <string name="notification_bar_title">FaceSignIn is running, please do not close</string>

    <string name="open_bluetooth_text">Please turn on Bluetooth</string>
    <string name="sure_scan_on_sensor_text">Make sure you are scanning the QR code on the sensor</string>
    <string name="parsing_qr_failed_text">Parsing the QR code failed</string>

    <string name="active_item_location_text">location: </string>
    <string name="active_item_time_text">time: </string>

    <string name="request_open_camera_text">Request to open the camera</string>

    <string name="start_time_text">start time：</string>
    <string name="end_time_text">end time：</string>

    <string name="sign_in_button_text">Sign in</string>

    <string name="unable_sign_location_error">Check-in is temporarily unavailable, please try again later and make sure you are near the event location</string>
    <string name="unable_sign_time_error">Does not match the check-in time</string>
    <string name="unable_sign_un_sign_out_error">You have not signed out yet, please sign out of the event first.</string>
    <string name="unable_sign_already_error">You have already checked in</string>

    <string name="sign_dialog_title">OK to sign in</string>
    <string name="sign_dialog_msg">You are sure you want to check in to the event</string>
    <string name="dialog_positive">Confirm</string>
    <string name="dialog_negative">Cancel</string>

    <string name="sign_dialog_loading_mag">Check in …</string>
    
    <string name="sign_fail">Check in failure:</string>

    <string name="sign_out_dialog_title">Determined to sign off</string>
    <string name="sign_out_dialog_msg">Are you sure to sign the event</string>

    <string name="sign_in_time_text">Check in time：</string>
    <string name="sign_out_time_text">Signing time：</string>

    <string name="sign_out_fail_location_error">Temporarily unable to sign out, please try again later and make sure you are near the event location</string>
    <string name="sign_out_fail">Sign off failure：</string>
    <string name="sign_out_success">Sign off success</string>

    <string name="sign_out_dialog_loading_mag">Sign off …</string>

    <string name="network_error">The current network is not available, please check the network connection</string>

    <string name="quantify_loading_text">Loading data…</string>
    <string name="quantify_look_sign_data">View check in data</string>
    <string name="quantify_look_rank">View rankings</string>
    <string name="quantify_no_data">No data</string>
    <string name="quantify_get_data_fail">History response failed:</string>
    <string name="quantify_no_sign_data">You have not participated in the event, go find something you like.</string>
    <string name="quantify_sign_times1">Accumulated  %d times</string>

    <string-array name="quantify_string_list">
        <item>Perseverance</item>
        <item>Knowledge</item>
        <item>Punctual</item>
        <item>Self regulation</item>
        <item>Vitality</item>
    </string-array>

    <string name="no_history_data">No history data</string>
    <string name="history_active_title">Historical details</string>

    <string name="active_details_title">Details Of The Active</string>

    <string name="mine_feedback_title">Feedback</string>
    <string name="mine_repair_title">Equipment repair</string>
    <string name="mine_setting_title">Setting</string>
    <string name="mine_grade_text">Grade：%d </string>
    <string name="mine_class_text">Class：%s</string>
    <string name="mine_dialog_call_phone">Call</string>
    <string name="mine_dialog_msg">If you encounter a cloud device failure, please contact：%s \nphone number：%s</string>

    <string name="mine_repair_loading_msg">Get the repairer information…</string>
    <string name="mine_repair_loading_fail">Failed to get repairer information, please try again later</string>

    <string name="feedback_text">If you have any comments or suggestions about this product, please feel positive feedback.</string>
    <string name="feedback_hint_text">Please enter your opinion</string>
    <string name="feedback_anonymous_text">Submit anonymously</string>
    <string name="feedback_submit_text">Submit</string>
    <string name="feedback_loading_msg">Send feedback…</string>
    <string name="feedback_msg_empty">Feedback cannot be empty</string>
    <string name="feedback_upload_success">Submit feedback successfully</string>
    <string name="feedback_upload_fail">Submit feedback failed</string>

    <string name="setting_change_info">Modify information</string>
    <string name="setting_change_password">Change Password</string>
    <string name="setting_updates">Check for updates</string>
    <string name="setting_logout">Logout</string>

    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_msg">You will be logged out of this account.</string>

    <string name="change_info_dialog_msg">Modify information…</string>
    <string name="change_info_no_change">You have not modified any information</string>
    <string name="change_info_fail">Failed to modify the information, please try again later</string>
    <string name="change_info_success">Modify information successfully</string>

    <string name="open_camera_fail">Failed to open camera</string>
    <string name="choose_image_source">Select an image source</string>
    <string name="choose_image_take_photo">Take a photo</string>
    <string name="choose_image_from_album">Choose from album</string>

    <string name="hint_name">Name</string>
    <string name="hint_grade">Grade</string>
    <string name="hint_class">Class</string>
    <string name="hint_phone">Phone number</string>
    <string name="change_button_text">Confirm</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm password</string>

    <string name="change_password_dialog_msg">Update password…</string>
    <string name="change_password_password_error">The password is incorrect</string>
    <string name="change_password_password_same">The new password is the same as the old password!</string>
    <string name="change_password_password_inconsistent">Inconsistent password!</string>
    <string name="change_password_fail">Password change failed</string>
    <string name="change_password_success">Password has been updated</string>

    <string name="registered_info_empty">Please complete the information</string>
    <string name="registered_dialog_msg">Registering…</string>
    <string name="registered_fail">Registration failed</string>
    <string name="registered_success">Registration success</string>
    <string name="registered_button">Register</string>

    <string name="register_face_dialog_title">Go to register face</string>
    <string name="register_face_dialog_msg">Face recognition is required when signing in. You must bind your face to complete registration.</string>
    <string name="register_face_dialog_msg2">After reinstalling the app or clearing the data, you need to re-register the face</string>

    <string name="permission_denied">Permission denied！</string>
    <string name="init_failed">Engine initialization failed with error code %d</string>
</resources>
