<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/id_swipe_ly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="110dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <rorbin.q.radarview.RadarView
            android:id="@+id/radarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/quantify_loading_text"
        android:textColor="#4c4c4c"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/quantify_look_sign_data"
        android:textColor="#8e8e8e"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/quantify_look_rank"
        android:visibility="gone"
        android:textColor="#8e8e8e"
        android:textSize="12sp" />
</RelativeLayout>