<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <cn.ian2018.facesignin.ui.widget.CustomVideoView
        android:id="@+id/videoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <cn.ian2018.facesignin.ui.widget.CircleImageView
                android:id="@+id/icon"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/hicc_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/account"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="#ffffff"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#ffffff"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="28dp"
            android:backgroundTint="#7a03a9f4"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/forget_password"
                android:textColor="#d5d3d3"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/register_account"
                android:textColor="#d5d3d3"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/copyright"
        android:textColor="#ffffff"
        android:textSize="@dimen/copyright_text_size" />


</RelativeLayout>
