<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <cn.ian2018.facesignin.ui.widget.CircleImageView
                android:id="@+id/icon"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_placeholder" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_change_name"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_change_grade"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/hint_grade"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_change_class"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/hint_class"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_change_phone"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_information_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_bg"
                android:text="@string/change_button_text"
                android:textColor="@color/mdtp_white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>